feat: setup websocket on notification-service