@@ -1,5 +1,6 @@
 package com.phuonghieuto.backend.api_gateway.config;
 
+import java.util.Arrays;
 import java.util.List;
 
 import org.springframework.cloud.gateway.route.RouteLocator;
@@ -18,16 +19,13 @@ public class GatewayConfig {
         private final JwtAuthenticationFilter jwtAuthFilter;
 
         // Public endpoints that do not require authentication
-        private static final List<String> PUBLIC_ENDPOINTS = List.of("/api/v1/users/register", "/api/v1/auth/login",
-                        "/api/v1/auth/refresh-token", "/api/v1/auth/logout", "/api/v1/auth/validate-token",
-                        "/api/v1/auth/authenticate");
+        private final List<String> PUBLIC_ENDPOINTS = Arrays.asList("/api/v1/users/register", "/v3/api-docs/**",
+                        "/swagger-ui/**", "/swagger-ui.html", "/api/v1/auth/api-docs", "/api/v1/tasks/api-docs",
+                        "/api/v1/notifications/api-docs", "/api/v1/ws-notifications/**");
 
         @Bean
         public RouteLocator routes(RouteLocatorBuilder builder) {
-                return builder.routes().route("auth-service", r -> r.path("/api/v1/auth/**")
-                                .filters(f -> f.filter(jwtAuthFilter.apply(new JwtAuthenticationFilter.Config()
-                                                .setPublicEndpoints(PUBLIC_ENDPOINTS))))
-                                .uri("lb://auth-service"))
+                return builder.routes().route("auth-service", r -> r.path("/api/v1/auth/**").uri("lb://auth-service"))
                                 .route("auth-service", r -> r.path("/api/v1/users/**").filters(
                                                 f -> f.filter(jwtAuthFilter.apply(new JwtAuthenticationFilter.Config()
                                                                 .setPublicEndpoints(PUBLIC_ENDPOINTS))))
@@ -48,6 +46,12 @@ public class GatewayConfig {
                                                 f -> f.filter(jwtAuthFilter.apply(new JwtAuthenticationFilter.Config()
                                                                 .setPublicEndpoints(PUBLIC_ENDPOINTS))))
                                                 .uri("lb://task-service"))
+                                .route("notification-service", r -> r.path("/api/v1/notifications/**").filters(
+                                                f -> f.filter(jwtAuthFilter.apply(new JwtAuthenticationFilter.Config()
+                                                                .setPublicEndpoints(PUBLIC_ENDPOINTS))))
+                                                .uri("lb://notification-service"))
+                                .route("notification-websocket", r -> r.path("/api/v1/ws-notifications/**")
+                                                .uri("lb:ws://notification-service"))
                                 .build();
         }
 }
